Start of HIP Tree

--- a/localisation/eaw_traits_l_english.yml
+++ b/localisation/eaw_traits_l_english.yml
@@ -6,6 +6,7 @@
  princess_of_ponies:0 "Princess of Ponies"
  dislikes_griffon_empire:0 "Dislikes the Empire"
  diamond_king:0 "Diamond King"
+ popular_leader:0 "Popular Leader"
  shadowbolt_society_trait:0 "Shadowbolt Society Chairmare"
  friendship_school_student:0 "Friendship School Graduate"
  agent_of_smile:0 "Agent of S.M.I.L.E."
